now with socket.io

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
   <head>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
-      let HOST = location.origin.replace(/^http/, 'ws')
-      let ws = new WebSocket(HOST);
+      let socket = io();
       let el;
 
-      ws.onmessage = (event) => {
+      socket.on('time', (timeString) => {
         el = document.getElementById('server-time');
-        el.innerHTML = 'Server time: ' + event.data;
-      };
+        el.innerHTML = 'Server time: ' + timeString;
+      });
     </script>
   </head>
   <body>
