--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         el.innerHTML = timeString;
       });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+    <script src="sketch.js"></script>
   </head>
   <body>
     <p id="server-time"></p>
