--- a/index.html
+++ b/index.html
@@ -13,7 +13,5 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="sketch.js"></script>
   </head>
-  <body>
-    <p id="server-time"></p>
-  </body>
+  <body></body>
 </html>
